# tiny-parse

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  built__in_8hpp_source.html  classes.html  classtiny__parse_1_1BaseParser-members.html  classtiny__parse_1_1BaseParser.html  classtiny__parse_1_1BaseParser.js  classtiny__parse_1_1BaseParser__inherit__graph.map  classtiny__parse_1_1BaseParser__inherit__graph.md5  classtiny__parse_1_1GreaterThan-members.html  classtiny__parse_1_1GreaterThan.html  classtiny__parse_1_1GreaterThan.js  classtiny__parse_1_1GreaterThan__coll__graph.md5  classtiny__parse_1_1GreaterThan__inherit__graph.map  classtiny__parse_1_1GreaterThan__inherit__graph.md5  classtiny__parse_1_1LessThan-members.html  classtiny__parse_1_1LessThan.html  classtiny__parse_1_1LessThan.js  classtiny__parse_1_1LessThan__coll__graph.map  classtiny__parse_1_1LessThan__coll__graph.md5  classtiny__parse_1_1LessThan__inherit__graph.md5  classtiny__parse_1_1Many-members.html  classtiny__parse_1_1Many.html  classtiny__parse_1_1Many.js  classtiny__parse_1_1Many__coll__graph.map  classtiny__parse_1_1Many__coll__graph.md5  classtiny__parse_1_1Many__inherit__graph.map  classtiny__parse_1_1Many__inherit__graph.md5  classtiny__parse_1_1Optional-members.html  classtiny__parse_1_1Optional.html  classtiny__parse_1_1Optional.js  classtiny__parse_1_1Optional__inherit__graph.map  classtiny__parse_1_1Optional__inherit__graph.md5  classtiny__parse_1_1Or-members.html  (+73 more)
.github/workflows/: build.yml  default.yml
docs/: Doxyfile  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-sidebar-only.css  doxygen-awesome.css  header.html
examples/: ipv4_parser.cpp  meson.build
include/tiny_parse/: built_in.hpp  meson.build  tiny_parse.hpp
search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  related_0.js  searchdata.js  variables_0.js  variables_1.js
test/: meson.build  tiny_parse_test.cpp
tests/: meson.build  tiny_parse_test.cpp
